# nobles_todo_api

./: .env  Cargo.toml
migrations/: init.sql
src/: config.rs  handler.rs  main.rs  model.rs
